# twinny

./: .editorconfig  .eslintrc.cjs  .gitignore  .vscode-test.js  .vscodeignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  README.zh-CN.md  example  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
assets/: codicon.css
docs/: providers.md
models/: spm.model
scripts/: build.mjs  copy-native-modules.js  installLanceDB.js  installTreeSitterWasms.js  install_onyx_model.sh  meta.js  postinstall.mjs
src/: CompletionProvider.ts  cache.ts  chat-service.ts  completion.ts  constants.ts  constants.tsx  context.ts  extension.global.d.ts  extension.ts  index.ts  init.ts  languages.ts  lib.rs  logger.ts  native.ts  prompt-template.ts  prompts.ts  requests.ts  sidebar.ts  stream-service.ts  stream.ts  template-provider.ts  types.ts  utils.ts
src/common/: constants.ts  extension.ts  languages.ts  logger.ts  models.ts  parse-assistant-message.ts  tool-definitions.ts  tool-parser.ts  types.ts
src/core/: read.ts  write.ts
src/extension/: api.ts  base.ts  cache.ts  chat-service.ts  chat.ts  completion-formatter.ts  context.ts  conversation-history.ts  diff.ts  embedding.ts  embeddings.ts  file-handler.ts  file-interaction.ts  fim-templates.ts  github-service.ts  injest.ts  languages.ts  llm.ts  logger.ts  model-options.ts  ollama-service.ts  ollama.ts  p2p-service.ts  parser-utils.ts  parser.ts  provider-manager.ts  provider-options.ts  reranker.ts  tree.ts  (+14 more)
(+139 files in other folders)
